--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
     "@hookform/error-message": "^2.0.1",
     "@hookform/resolvers": "^3.3.2",
     "@material-tailwind/react": "^2.1.2",
+    "@tanstack/react-query": "^5.0.0",
+    "axios": "^1.5.1",
     "next": "13.5.4",
+    "next-auth": "^4.23.2",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.47.0",
