--- a/package.json
+++ b/package.json
@@ -15,15 +15,19 @@
     "@material-tailwind/react": "^2.1.2",
     "@tanstack/react-query": "^5.0.0",
     "axios": "^1.5.1",
+    "lodash": "^4.17.21",
     "next": "13.5.4",
     "next-auth": "^4.23.2",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.47.0",
     "react-toastify": "^9.1.3",
-    "zod": "^3.22.4"
+    "react-use": "^17.4.0",
+    "zod": "^3.22.4",
+    "zustand": "^4.4.3"
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.200",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
