--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-hook-form": "^7.47.0",
     "react-toastify": "^9.1.3",
     "react-use": "^17.4.0",
+    "truncate": "^3.0.0",
     "zod": "^3.22.4",
     "zustand": "^4.4.3"
   },
