--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@hookform/resolvers": "^3.3.2",
     "@material-tailwind/react": "^2.1.2",
     "@tanstack/react-query": "^5.0.0",
+    "@tanstack/react-query-devtools": "^5.0.3",
     "axios": "^1.5.1",
     "lodash": "^4.17.21",
     "next": "13.5.4",
